--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,7 +5,7 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Compiling Java code...
-      - ./gradlew bootJar
+      - ./gradlew build
   post_build:
     commands:
       - echo Build completed on `date`
